<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editprofile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editprofile"
            android:textAlignment="center"
            android:textColor="?android:attr/colorActivatedHighlight"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="204dp" />

        <EditText
            android:id="@+id/editTextTextPostalAddress3"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:backgroundTint="#FF1744"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="@string/address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.514" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="113dp"
            android:layout_height="101dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:backgroundTint="#B52A2A"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/yourname"
        android:textColorHint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <EditText
        android:id="@+id/editTextPhone3"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <Button
        android:id="@+id/button12"
        android:layout_width="253dp"
        android:layout_height="44dp"
        android:background="#FFEA00"
        android:backgroundTint="#D6AF7B"
        android:text="@string/update"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

</androidx.constraintlayout.widget.ConstraintLayout>