<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:background="#454242"
        android:src="@android:drawable/ic_lock_idle_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:background="#454242"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:background="#454242"
        android:src="@android:drawable/ic_menu_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:background="#454242"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:background="#454242"
        android:src="@android:drawable/ic_dialog_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:background="#454242"
        android:src="@android:drawable/ic_menu_myplaces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:hint="@string/yourname"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:backgroundTint="#FF1744"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/register"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:backgroundTint="#E8B6C0"
        android:text="@string/rs"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:text="@string/REG"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="93dp"
        android:layout_height="155dp"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>